syntax = "proto3";

enum EventType {
   NEW_SYNC_TIMELINE  						= 0; 
   DEL_SYNC_TIMELINE       					= 1;
   SYNCTL_STATE_CHANGE   					= 2;     
   SYNCTL_NODE_DISPERSION_EXCEEDED 			= 3; 
}
  


message Header{
	EventType eventType 					= 1;
	string sessionId 						= 2;
	string senderId 						= 3;
	string version 							= 4;
	string eventId 							= 5;
}

message SyncEvent{
	Header header							= 1;
	bytes body								= 2;
}


message PresentationTimestamp
{
	double contentTime 						= 1;
	double wallClockTime 					= 2;
	float speed 							= 3;
}

message CorrelationTimestamp
{
	PresentationTimestamp actual			= 1;
	PresentationTimestamp earliest			= 2;
	PresentationTimestamp latest			= 3;
}

message NewSyncTLEvent{
	string providerId		 				= 2;
	string timelineId 						= 3;
	string timelineType 					= 4;
	string contentId 						= 5;
	int32 frequency 						= 6;
	string channel 							= 7;
	bool useForSessionSync 					= 8;
	bool writable 							= 9;
	CorrelationTimestamp timestamp			= 10;
}


message DelSyncTLEvent{
	string timelineId 						= 1;
}


